--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="og:image" content="avatar.jpg">
 		<meta name="og:description" content="Multimedia Designer at INDOLIFE">
 
-		<title>Andwi Wicaksono &mdash; Multimedia Division di INDOLIFE</title>
+		<title>Andwi Wicaksono &mdash; Multimedia Division at PT Indolife Pensiontama</title>
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="https://cdn.rawgit.com/jgthms/bulma/master/css/bulma.min.css">
@@ -50,7 +50,7 @@
 						Andwi Wicaksono
 					</h3>
 					<h4 class="subtitle is-6">
-						Multimedia Division di <a class="indolife" href="http://www.indolife.biz" target="_blank">PT Indolife Pensiontama</a>
+						Multimedia Division at <a class="indolife" href="http://www.indolife.biz" target="_blank">PT Indolife Pensiontama</a>
 					</h4>
 					<nav class="navbar">
 						<a class="navbar-item facebook" href="https://www.facebook.com/andes.graff" target="_blank">
