--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="muik">
 		<meta name="og:title" content="Andwi Wicaksono">
 		<meta name="og:image" content="avatar.jpg">
-		<meta name="og:description" content="Multimedia Designer at PT Indolife Pensiontama">
+		<meta name="og:description" content="Multimedia Division at PT Indolife Pensiontama">
 
 		<title>Andwi Wicaksono &mdash; Multimedia Division at PT Indolife Pensiontama</title>
 
