--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					background: transparent; }
 					a.indolife { color: #034DA1; }
 					a.facebook { color: #3b5998; }
+					a.youtube { color: #cd201f; }
 					a.behance { color: #1769ff; }
 					a.linkedin { color: #0077b5; }
 					a.mail { color: #333; }
@@ -55,6 +56,9 @@
 					<nav class="navbar">
 						<a class="navbar-item facebook" href="https://www.facebook.com/andes.graff" target="_blank">
 							<span class="icon"><i class="fa fa-facebook-official"></i></span>
+						</a>
+						<a class="navbar-item youtube" href="https://www.youtube.com/channel/UC_gxF5X-XUIiKc3Is9uXaRA/videos" target="_blank">
+							<span class="icon"><i class="fa fa-youtube-square"></i></span>
 						</a>
 						<a class="navbar-item behance" href="https://www.behance.net/andwi" target="_blank">
 							<span class="icon"><i class="fa fa-behance-square"></i></span>
